--- a/index.html
+++ b/index.html
@@ -1,1 +1,11 @@
-<h1>hello world</h1>
+<html>
+    <head>
+
+    </head>
+    <body>
+
+          <h1>Hello all</h1>
+          <p>All the things to be done at the done!</p>
+
+    </body>
+</html>
